Fixed white space bar bug and updated Navbar design

--- a/client/components/Navbar.module.css
+++ b/client/components/Navbar.module.css
@@ -1,5 +1,5 @@
 /* Navbar.module.css */
-.navbar {
+/* .navbar {
   background-color: #f5f0eb;
   padding: 1rem 2rem;
   display: flex;
@@ -11,7 +11,25 @@
   right: 0;
   width: 100%;
   z-index: 100;
+} */
+
+.navbar {
+  background-color: rgba(224, 216, 207, 0.5);
+  backdrop-filter: blur(2px); 
+  border-bottom: 1px solid rgba(146, 138, 123, 0.3); 
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05); 
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  z-index: 100;
 }
+
 
 .logo {
   font-family: serif;
